tests/errors/bad_return_type.ptt
use std/string

foo() int { give "hello" }
spark { yell(foo()) }
